# gaudi

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SESSION_STATE.md  gaudi.toml  pyproject.toml  requirements-lock.txt
.claude/: settings.json
.claude/hooks/: guard_main_worktree.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
data/: tool_registry.md
docs/: gaudi-architectural-philosophies.md  gaudi-rules.md  llm-workflow.md  pr-migration-guide.md  principles.md  rule-registry.md  rule-sources.md  testing-fixtures.md
docs/audits/: aigranthelper-2026-04-12.md
docs/philosophy/: README.md  canonical-task.md  classical.md  convention.md  data-oriented.md  event-sourced.md  functional.md  pragmatic.md  resilient.md  unix.md
documentation/trajectories/: 2026-06-11-PR233.md  2026-06-11-PR234.md  2026-06-11-PR235.md  2026-06-19-PR238.md  2026-06-19-PR239.md
scripts/: fixture_coverage.py  setup-branch-protection.sh
scripts/dev/: new-session.sh  secret_scan.py
scripts/tools/: generate_tool_registry.py
src/gaudi/: __init__.py  cli.py  config.py  core.py  engine.py  excludes.py  formats.py  pack.py  philosophy.py
src/gaudi/packs/: __init__.py
src/gaudi/packs/cpp/: __init__.py
src/gaudi/packs/csharp/: __init__.py
src/gaudi/packs/go/: __init__.py
src/gaudi/packs/java/: __init__.py
src/gaudi/packs/javascript/: __init__.py
src/gaudi/packs/kotlin/: __init__.py
src/gaudi/packs/ops/: __init__.py  context.py  pack.py  parser.py
src/gaudi/packs/php/: __init__.py
src/gaudi/packs/python/: __init__.py  ast_helpers.py  context.py  pack.py  parser.py  rules.py  rules_libraries.py  rules_py314.py
src/gaudi/packs/ruby/: __init__.py
src/gaudi/packs/rust/: __init__.py
src/gaudi/packs/swift/: __init__.py
src/gaudi/services/: __init__.py  cheat_sheet.py
src/gaudi/tools/: __init__.py  fixture_coverage.py
tests/: fixture_corpus.py  test_alembic_rules.py  test_anthropic_rules.py  test_arch90_rules.py  test_boto3_rules.py  test_cheat_sheet.py  test_complexity_rules.py  test_config_rules.py  test_dependency_rules.py  test_errors_rules.py  test_fixture_corpus.py  test_fixture_corpus_loader.py  test_layers_rules.py  test_library_activation.py  test_logging_rules.py  test_ops_pack.py  test_ops_rules.py  test_overrides_noqa.py  test_packaging_rules.py  test_parser_excludes.py  test_philosophy_inference.py  test_philosophy_scope.py  test_python_pack.py  test_report_formats.py  test_rule_principle_citations.py  test_security_rules.py  test_service_rules.py  test_smell_rules.py  test_stability_rules.py  test_types_rules.py
tests/fixtures/: arch90_bare_except.py  arch90_connector_logic.py  arch90_env_leakage.py  arch90_error_swallowing.py  arch90_fat_script.py  arch90_import_direction.py  arch90_magic_strings.py  arch90_missing_precommit.py  arch90_missing_pyproject.py  arch90_missing_return_types.py  arch90_no_entry_point.py  arch90_no_lock_file.py  arch90_path_hacks.py  arch90_scattered_config.py  arch90_unstructured_logging.py  cplx_conjoined_methods.py  cplx_shallow_module.py  sample_models.py  sample_py314.py  sec_eval_exec.py  sec_hardcoded_credential.py  sec_raw_sql.py  sec_unsafe_deserialization.py  smell_alt_interfaces.py  smell_comments.py  smell_data_class.py  smell_data_clumps.py  smell_divergent_change.py  smell_duplicated_code.py  smell_feature_envy.py  smell_global_data.py  smell_insider_trading.py  smell_large_class.py  smell_lazy_element.py  smell_long_function.py  smell_long_params.py  smell_loops.py  smell_message_chains.py  smell_middle_man.py  smell_mutable_data.py  (+16 more)
tests/fixtures/ops/OPS-006/: expected.json
tests/fixtures/ops/OPS-007/: expected.json
tests/fixtures/ops/OPS-009/: expected.json
tests/fixtures/python/ALM-ARCH-001/: expected.json  fail_ellipsis_downgrade.py  fail_empty_downgrade.py  fail_missing_downgrade.py  pass_not_a_migration.py  pass_with_downgrade.py
tests/fixtures/python/ALM-OPS-001/: expected.json
tests/fixtures/python/API-001/: expected.json  fail_returns_all_no_pagination.py  pass_paginated.py
tests/fixtures/python/API-002/: expected.json  fail_dict_then_response.py  pass_consistent_dict.py
tests/fixtures/python/API-003/: expected.json  fail_int_pk_url.py  pass_uuid_pk_url.py
tests/fixtures/python/API-004/: expected.json  fail_response_model_no_responses.py  pass_with_responses.py
tests/fixtures/python/ARCH-001/: expected.json
tests/fixtures/python/ARCH-002/: expected.json  fail_god_model.py  pass_at_threshold.py  pass_normal_model.py
tests/fixtures/python/ARCH-003/: expected.json  fail_join_table_nullable_fks.py  fail_nullable_fk_sprawl.py  pass_entity_with_optional_relations.py  pass_one_nullable_fk.py  pass_required_fks.py
tests/fixtures/python/ARCH-010/: expected.json  fail_imports_cli.py  pass_inner_only_imports.py  pass_stdlib_imports.py
tests/fixtures/python/ARCH-011/: expected.json  fail_db_with_branching.py  pass_connector_xpath_dispatch.py  pass_db_translator_only.py  pass_service_with_branching.py
tests/fixtures/python/ARCH-013/: expected.json  fail_fat_script.py  pass_not_an_entry_point.py  pass_thin_entry_point.py
tests/fixtures/python/ARCH-020/: expected.json  fail_class_reads_env.py  pass_class_takes_config.py  pass_module_function_reads_env.py
tests/fixtures/python/ARCH-022/: expected.json
tests/fixtures/python/ASYNC-001/: expected.json  fail_shared_dict_in_pool.py  (+1 more)
tests/philosophy/: __init__.py  seed_data.py  test_philosophy_matrix.py
tests/philosophy/classical/: __init__.py  test_canonical.py
tests/philosophy/convention/: __init__.py  test_canonical.py
tests/philosophy/data_oriented/: test_canonical.py
tests/philosophy/event_sourced/: test_canonical.py
tests/philosophy/functional/: __init__.py  test_canonical.py
tests/philosophy/pragmatic/: __init__.py  test_canonical.py
tests/philosophy/resilient/: test_canonical.py
tests/philosophy/unix/: __init__.py  test_canonical.py
(+669 files in other folders)
