[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaudi-linter"
version = "0.1.0"
description = "Not just structurally sound. Beautiful. An architecture linter for Python projects."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nathan Krupa", email = "54715560+NathanKrupa@users.noreply.github.com"},
]
keywords = ["linter", "architecture", "database", "schema", "ai", "claude", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "click>=8.0",
    "tomli>=2.0;python_version<'3.11'",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
gaudi = "gaudi.cli:main"
gaudi-fixture-coverage = "gaudi.tools.fixture_coverage:main"

[project.entry-points."gaudi.packs"]
python = "gaudi.packs.python:PythonPack"

[project.urls]
Homepage = "https://github.com/NathanKrupa/gaudi"
Repository = "https://github.com/NathanKrupa/gaudi"
Issues = "https://github.com/NathanKrupa/gaudi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["F401", "F841", "E402", "E722"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110", "B112"]
