[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaudi-linter"
version = "0.1.1"
description = "Not just structurally sound. Beautiful. An architecture linter for Python projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Nathan Krupa", email = "54715560+NathanKrupa@users.noreply.github.com"},
]
keywords = ["linter", "architecture", "database", "schema", "ai", "claude", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "click>=8.0",
    "tomli>=2.0;python_version<'3.11'",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    # Test-only. Used exclusively by the Convention reference exemplar
    # under tests/philosophy/convention/canonical/ to demonstrate a
    # faithful Django implementation of the canonical order-processing
    # task. Gaudi itself has NO runtime dependency on Django — all
    # DJ-*, DRF-*, and Django-aware rules lint user projects via AST
    # inspection, not by importing their code.
    #
    # Pinned to Django 5.x LTS for CI stability. Django 5.2 is the
    # current LTS, officially supports Python 3.10-3.13, and works
    # on 3.14 at the time of writing but is not officially supported
    # there. The Convention tests are skipped automatically when
    # Django cannot be imported, so CI on 3.14 stays green even if
    # pip resolution leaves Django uninstalled.
    "django>=5.0,<6.0; python_version<'3.14'",
    # Test-only. Used exclusively by the Data-Oriented reference exemplar
    # under tests/philosophy/data_oriented/canonical/ to demonstrate a
    # faithful Struct-of-Arrays implementation of the canonical order-
    # processing task. Gaudi itself has NO runtime dependency on numpy
    # — the exemplar uses numpy ndarrays as the honest Python expression
    # of data-oriented memory layout. The Data-Oriented tests are skipped
    # automatically when numpy cannot be imported (via pytest.importorskip).
    "numpy>=1.26",
]

[project.scripts]
gaudi = "gaudi.cli:main"
gaudi-fixture-coverage = "gaudi.tools.fixture_coverage:main"

[project.entry-points."gaudi.packs"]
python = "gaudi.packs.python:PythonPack"
ops = "gaudi.packs.ops:OpsPack"

[project.urls]
Homepage = "https://github.com/NathanKrupa/gaudi"
Repository = "https://github.com/NathanKrupa/gaudi"
Issues = "https://github.com/NathanKrupa/gaudi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["F401", "F841", "E402", "E722"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110", "B112"]
